# pip-repo

./: .gitignore  CNAME  index.html
code/Projection/: MANIFEST.in  Projection.py  README.md  pyproject.toml
code/Projection/rerun_projection/: __init__.py  api.py  cli.py  config.py  models.py  projection_core.py  rerun_scene.py  runtime.py  server.py  session.py
code/Projection/rerun_projection/web_dist/: index.html
code/Projection/rerun_projection/web_dist/assets/: index-CRjVigGv.js  index-sgAyYjTX.css  re_viewer-D5vaVejy.js
code/Projection/tests/: test_api.py  test_cli.py  test_projection_core.py  test_rerun_scene.py  test_runtime_blueprint.py  test_server.py  test_session.py
code/Projection/web/: index.html  package-lock.json  package.json  vite.config.ts
code/Projection/web/src/: api.ts  forms.test.ts  forms.ts  layout.test.ts  main.ts  state.test.ts  state.ts  styles.css  viewer.test.ts  viewer.ts
code/calib_snap/: README.md  calib_snap.py  pyproject.toml
docs/: Projection.html  Projection.md  calib-snap.html  calib-snap.md  dataset.html  dateset.md  fov_filter.html  fov_filter.md  index.html  split_bag.html  split_bag.md
scripts/: generate_indexes.py
